# demo_gui_pose_analyzer

./: README.md  clean_db.py  kuro_posture.db  pyproject.toml
test/: .env  .env.example  BATCH_EXPORT_TUTORIAL.md  DEPLOYMENT_COMPLETE.md  MEDICAL_FORMULAS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  config.py  kuro_posture.db  requirements.txt  run_api.py  run_gui.py  test_viz.py  verify_build.py  verify_integration.py  verify_leg_updates.py
test/api/: main.py
test/api/models/: schemas.py
test/api/routes/: analysis.py  auth.py  patients.py
test/api/services/: analyzer.py  check_db.py  database.py
test/assets/: LOGO_NOTE.md
test/core/: __init__.py  pose_analyzer.py  visualizer.py
test/gui/: main_gui.py
test/gui/screens/: fix_garbage.py  landing.py  register.py  results.py  upload.py
test/gui/utils/: api_client.py  plot_helpers.py  ui_helpers.py
test/scripts/: probe_lateral_indices.py
test/scripts/debug/: debug_yolo.py
