[project]
name = "my-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.128.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pillow>=12.1.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "ultralytics>=8.4.6",
    "uvicorn>=0.40.0",
]
